# embedmind

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: Cargo.toml  README.md  build.rs  chroma_bench.py  run_all.sh
benches/results/: 0.1.0-dev.json  bench-fts-100k-after-ft2.txt  probe-worst-100k.txt  probe-worst-10k.txt  profile-fts-100k-ftopt0.txt  profile-fts-100k.txt  profile-recall-100k-ftopt5.txt  profile-recall-100k-ftopt6-after.txt  profile-recall-100k-ftopt6-before.txt  profile-recall-100k-ftopt7-before.txt  profile-recall-100k-ftopt8-after.txt  profile-recall-100k-ftopt8-before.txt  profile-recall-10k-ftopt8-after.txt  profile-recall-10k-ftopt8-before.txt  profile-rss-100k.txt
benches/src/: baseline.rs  competitors.rs  corpus.rs  dataset.rs  fts_compare.rs  harness.rs  lexical.rs  lib.rs  metrics.rs  recall.rs  regression.rs  report.rs  sysmem.rs
benches/tests/: harness.rs
bindings/python/: Cargo.toml  README.md  embedmind.pyi  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_e2e.py  test_roundtrip.py
crates/embedmind-cli/: Cargo.toml  README.md
crates/embedmind-cli/src/: main.rs
crates/embedmind-cli/tests/: cli.rs
crates/embedmind-core/: Cargo.toml  README.md  build.rs
crates/embedmind-core/examples/: gen_fuzz_corpus.rs
crates/embedmind-core/src/: api.rs  embed.rs  error.rs  format.rs  fuzz.rs  index.rs  lib.rs  recall.rs  record.rs  storage.rs
crates/embedmind-core/src/index/: dict.rs  filter_meta.rs  fts.rs  graph.rs
crates/embedmind-core/src/storage/: btree.rs  pager.rs  sim.rs  vfs.rs  wal.rs
crates/embedmind-core/tests/: crash.rs  crash_filter_meta.rs  crash_records.rs  crash_supersede.rs  crash_vacuum.rs  filter_meta.rs  filters.rs  portability.rs  recall.rs
crates/embedmind-mcp/: Cargo.toml  README.md
crates/embedmind-mcp/src/: lib.rs  main.rs  oplog.rs  project.rs  report.rs  server.rs
crates/embedmind-mcp/tests/: protocol.rs
docs/: 00-prd.md  01-spec.md  02-plan.md  03-tasks.md  04-agents.md  BENCHMARKS.md  FORMAT.md  RELEASING.md  TESTING.md
docs/adr/: 0001-wal-fisico-de-paginas.md  0002-hnsw-proprio-paginado.md  0003-soft-delete-e-vacuum.md  0004-modelo-de-embedding-embarcado.md  0005-rrf-para-fusao-hibrida.md  0006-single-writer.md  0007-criptografia-reservada-no-formato.md  0008-hnsw-enderecamento-direto-de-paginas.md  0009-mcp-stdio-direto-sem-sdk.md  0010-teto-de-tamanho-governa-artefato-comprimido.md  0011-full-text-indice-invertido-proprio.md  0012-camada-de-grafo-paginada.md  0013-supersedes-flag-no-record.md  0014-recencia-terceira-lista-rrf.md  0015-ef-search-default-escalado-pelo-indice.md  0016-limiar-de-near-duplicate-medido.md  0017-otimizacao-do-full-text-escopo-e-metodo.md  0018-early-termination-no-scan-bm25.md  0019-recall-tie-aware-no-harness.md  0020-rss-de-pico-era-o-harness-nao-o-engine.md  0021-postings-fts-delta-varint.md  0022-postings-fts-skip-lists.md  0023-blockmax-wand-decisao-fase-bmw.md  0024-bound-de-impacto-por-bloco-fv6.md  0025-blockmax-wand-na-busca-fts.md  0026-corpus-de-localidade-nao-reabilita-o-bmw.md  0027-filter-meta-sidecar-fv7.md  0028-postings-fts-frame-of-reference.md  README.md
docs/launch/: faq.md  gif-script.md  post-2-engine-internals.md  post-3-dogfooding.md  post.md
docs/progress/: 2026-07-07-m1-item-1.2-e-1.8.html
fuzz/: Cargo.toml
fuzz/corpus/fuzz_filter_meta_page/: seed-type-0c  seed-type-0d
fuzz/corpus/fuzz_fts_page/: crash-9116d630a5fae3ac97551c97104213cd2f5f4e9a  seed-postings-skip-v5  seed-postings-skip-v6  seed-type-08  seed-type-08-v4  seed-type-08-v5  seed-type-08-v6  seed-type-09  seed-type-09-v4  seed-type-09-v5  seed-type-09-v6
fuzz/corpus/fuzz_graph_page/: seed-type-0a  seed-type-0a-meta  seed-type-0b
fuzz/corpus/fuzz_header/: seed-fresh-header  seed-live-wal-prefix
fuzz/corpus/fuzz_open_full/: seed-clean-store
fuzz/corpus/fuzz_page/: seed-type-01  seed-type-02  seed-type-07
fuzz/corpus/fuzz_record/: seed-full-record  seed-minimal-record
fuzz/corpus/fuzz_wal_replay/: seed-live-wal
fuzz/fuzz_targets/: fuzz_filter_meta_page.rs  fuzz_fts_page.rs  fuzz_graph_page.rs  fuzz_header.rs  fuzz_open_full.rs  fuzz_page.rs  fuzz_record.rs  fuzz_wal_replay.rs
fuzz/regressions/: README.md
scripts/: smoke_gif_script.sh  smoke_install.sh
tools/: dogfood-sample.sh  go-no-go-report.sh  go_no_go_report.py
