[workspace]
resolver = "2"
members = [
    "crates/embedmind-core",
    "crates/embedmind-mcp",
    "crates/embedmind-cli",
]
# The fuzz crate is its own workspace: it needs nightly + libFuzzer (Linux CI
# job), and must not drag those requirements into the stable build.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
license = "MIT"
authors = ["Rodrigo Escorsim <rodrigo.escorsim@gmail.com>"]
rust-version = "1.90"

[workspace.dependencies]
embedmind-core = { path = "crates/embedmind-core" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ulid = "1"
# Embeddings (DESIGN.md §10 — the two heaviest deps, isolated behind
# `embed::Embedder`, workspace-pinned so both crate and any future bindings
# stay in lockstep). `ort` default features include `download-binaries`,
# fetching the ONNX Runtime shared library at build time — no system install
# required, keeping the "one command" promise (ROADMAP 1.6).
ort = "2.0.0-rc.12"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
# Shells only (DESIGN.md §10): the binary format never uses serde.
serde_json = "1"

# The engine forbids unsafe code; the only future exception (an isolated mmap
# module, if ever) must opt out explicitly and be auditable. See CONTRIBUTING.md.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
