[workspace]
resolver = "2"
members = [
    "crates/embedmind-core",
    "crates/embedmind-mcp",
    "crates/embedmind-cli",
    "benches",
]
# The fuzz crate is its own workspace: it needs nightly + libFuzzer (Linux CI
# job), and must not drag those requirements into the stable build.
# The Python bindings are excluded too: PyO3's generated glue needs `unsafe`,
# which the workspace's `unsafe_code = "forbid"` lint would reject, and maturin
# drives that crate directly (bindings/python).
exclude = ["fuzz", "bindings/python"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Rodrigo Escorsim <rodrigo.escorsim@gmail.com>"]
rust-version = "1.90"
# Shared crates.io metadata (docs/RELEASING.md). Per-crate `description`,
# `keywords`, `categories` and `readme` stay in each crate's Cargo.toml.
repository = "https://github.com/rodrigoescorsim/embedmind"
homepage = "https://github.com/rodrigoescorsim/embedmind"

[workspace.dependencies]
# Inter-crate deps carry both `path` (local builds) and `version` (crates.io
# strips `path` on publish and needs the version to resolve — docs/RELEASING.md).
embedmind-core = { path = "crates/embedmind-core", version = "0.1.0" }
embedmind-mcp = { path = "crates/embedmind-mcp", version = "0.1.0" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ulid = "1"
# Embeddings (DESIGN.md §10 — the two heaviest deps, isolated behind
# `embed::Embedder`, workspace-pinned so both crate and any future bindings
# stay in lockstep). `ort` default features include `download-binaries`,
# fetching the ONNX Runtime shared library at build time — no system install
# required, keeping the "one command" promise (ROADMAP 1.6).
# Default features pull in `tls-native` (native-tls -> openssl-sys) for that
# download; swapped for `tls-rustls` (vendored, no system OpenSSL) because the
# manylinux container the release workflow's `wheels` job builds Linux wheels
# in has no OpenSSL dev headers and fails to compile openssl-sys.
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "tracing",
    "download-binaries",
    "tls-rustls",
    "copy-dylibs",
    "api-24",
] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
# Shells only (DESIGN.md §10): the binary format never uses serde.
serde_json = "1"

# The engine forbids unsafe code; the only future exception (an isolated mmap
# module, if ever) must opt out explicitly and be auditable. See CONTRIBUTING.md.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
