[package]
name = "embedmind-bench"
description = "Benchmark harness for embedmind-core: committed dataset generators, brute-force baseline, recall@10 measurement (docs/BENCHMARKS.md). Not published."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
embedmind-core = { workspace = true }
ulid = { workspace = true }
# Pure-Rust process introspection for peak-RSS sampling (docs/BENCHMARKS.md §3).
# Pinned; needs no `unsafe` in our code, so the workspace's `unsafe_code =
# forbid` stands even though we read OS memory counters.
sysinfo = "=0.31.4"

[features]
default = []
# Competitor comparison adapters (docs/BENCHMARKS.md §1). Off by default so the
# harness builds everywhere (the CI regression guard runs EmbedMind-only
# metrics); a release box with the native toolchains enables them to fill the
# comparison columns. See `src/competitors.rs`.
compare-sqlite-vec = []
compare-zvec = []

[lints]
workspace = true

# One binary per harness entry point (docs/BENCHMARKS.md §2/§3). `gen_dataset`
# materializes a committed dataset spec into vectors + a `.mind` store;
# `baseline` runs the brute-force recall@10 reference over the same vectors.
[[bin]]
name = "gen_dataset"
path = "src/bin/gen_dataset.rs"

[[bin]]
name = "baseline"
path = "src/bin/baseline.rs"

# The full suite: runs every metric over the requested datasets, compares
# against the pinned competitors, validates the spec NFRs, and writes the
# README-ready markdown table + a `results/<version>.json` (docs/BENCHMARKS.md
# §3/§4). Driven end-to-end by `benches/run_all.sh`.
[[bin]]
name = "run_all"
path = "src/bin/run_all.rs"
