[package]
name = "embedmind"
description = "Persistent memory for AI agents — single file, local, no server. CLI + MCP server."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["ai", "agents", "memory", "mcp", "cli"]
categories = ["command-line-utilities", "database", "text-processing"]

[[bin]]
name = "embedmind"
path = "src/main.rs"

[dependencies]
embedmind-core = { workspace = true }
# `embedmind serve` runs the same MCP server as the standalone binary — one
# installed command covers both the CLI and the agent integration (item 1.6).
# Pinned via workspace.dependencies so the published crate carries a version.
embedmind-mcp = { workspace = true }
clap = { workspace = true }
# `report --json`: the CLI's first machine-readable output (S23) — consumed
# by the Agentic Panel without scraping the human print.
serde_json = { workspace = true }

[lints]
workspace = true
