[package]
name = "embedmind-core"
description = "Embedded memory engine for AI agents: single crash-safe file, vector + full-text + graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
xxhash-rust = { workspace = true }

[lints]
workspace = true
