[package]
name = "embedmind-core"
description = "Embedded memory engine for AI agents: single crash-safe file, vector + full-text + graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["embeddings", "vector", "memory", "database", "ai"]
categories = ["database-implementations", "science", "data-structures"]

[dependencies]
thiserror = { workspace = true }
xxhash-rust = { workspace = true }
ulid = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
