[package]
name = "embedmind-mcp"
description = "MCP memory server for AI agents: remember / recall / forget over a single local file"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "embedmind-mcp"
path = "src/main.rs"

[dependencies]
embedmind-core = { workspace = true }
# The MCP protocol is implemented directly over stdio JSON-RPC (docs/adr/0009)
# — no SDK, no tokio. serde_json is the only wire-format dependency.
serde_json = { workspace = true }

[lints]
workspace = true
